--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -47,9 +47,9 @@ jobs:
       - name: Run Un-Mocked tests
         run: python -m unittest tests/unmocked_unit_tests.py
         env:
-          DATABASE_URL: ${{ env.DATABASE_URL }}
+          DATABASE_URL: '${{ env.DATABASE_URL }}'
 
       - name: Run Mocked tests
         run: python -m unittest tests/mocked_unit_tests.py
         env:
-          DATABASE_URL: ${{ env.DATABASE_URL }}
+          DATABASE_URL: '${{ env.DATABASE_URL }}'
