Working on getting the mocked unit tests to work with github actions.

--- a/.github/workflows/server-ci.yml
+++ b/.github/workflows/server-ci.yml
@@ -52,4 +52,4 @@ jobs:
       - name: Run Mocked tests
         run: python -m unittest tests/mocked_unit_tests.py
         env:
-          DATABASE_URL: '${{ env.DATABASE_URL }}'
+          DATABASE_URL: ${{ env.DATABASE_URL }}
